--- a/src/myshop/PC_MYP_1006.html
+++ b/src/myshop/PC_MYP_1006.html
@@ -2,7 +2,7 @@
 <html lang="ko">
 <head>
 	@@include('../inc/pagehead.inc', {
-		"pagetitle": "인스턴트펑크 공식홈페이지 - 인스턴트펑크 INSTANTFUNK - 마이페이지 - 반품신청",
+		"pagetitle": "인스턴트펑크 공식홈페이지 - 인스턴트펑크 INSTANTFUNK - 마이페이지 - 교환신청",
 		"webroot": "../"
 	})
 	<link rel="stylesheet" href="../assets/css/myshop.css">
@@ -18,9 +18,9 @@
 			<div class="myshop">
 				<div class="myshop__container">
 					<div class="myshop__header">
-						<p class="myshop__title">반품신청</p>
+						<p class="myshop__title">교환신청</p>
 					</div>
-					<div module="Myshop_OrderHistoryApplyReturn">
+					<div module="Myshop_OrderHistoryApplyExchange">
 						<div class="myshop__articles">
 							<div class="myshop__article">
 								<div class="myshop__row">
@@ -150,7 +150,7 @@
 								</div>
 								<div class="button">
 									<div class="button__container">
-										<button type="button" class="button__item button__item--large button__item--black">반품신청</button>
+										<button type="button" class="button__item button__item--large button__item--black">교환신청</button>
 										<a href="#" class="button__item button__item--large">이전페이지</a>
 									</div>
 								</div>
