--- a/src/index.html
+++ b/src/index.html
@@ -62,7 +62,7 @@
 				</tr>
 				<tr>
 					<td>Product > 상품후기</td>
-					<td>PC_SHP_1001</td>
+					<td>PC_SHP_1004</td>
 					<td><a href="./product/PC_SHP_1004.html" target="_blank">./product/PC_SHP_1004.html</a></td>
 					<td></td>
 				</tr>
@@ -142,6 +142,48 @@
 					<td>마이페이지 > 주문내역조회 > 주문상세조회</td>
 					<td>PC_MYP_1002</td>
 					<td><a href="./myshop/PC_MYP_1002.html" target="_blank">./member/PC_MYP_1002.html</a></td>
+					<td></td>
+				</tr>
+				<tr>
+					<td>마이페이지 > 주문내역조회 > 주문상세조회 > 세금계산서 신청 팝업</td>
+					<td>PC_MYP_1003_L</td>
+					<td><a href="./myshop/PC_MYP_1003_L.html" target="_blank">./member/PC_MYP_1003_L.html</a></td>
+					<td></td>
+				</tr>
+				<tr>
+					<td>마이페이지 > 주문내역조회 > 주문상세조회 > 현금영수증 신청 팝업</td>
+					<td>PC_MYP_1004_L</td>
+					<td><a href="./myshop/PC_MYP_1004_L.html" target="_blank">./member/PC_MYP_1004_L.html</a></td>
+					<td></td>
+				</tr>
+				<tr>
+					<td>마이페이지 > 반품신청</td>
+					<td>PC_MYP_1005</td>
+					<td><a href="./myshop/PC_MYP_1005.html" target="_blank">./member/PC_MYP_1005.html</a></td>
+					<td></td>
+				</tr>
+				<tr>
+					<td>마이페이지 > 교환신청</td>
+					<td>PC_MYP_1006</td>
+					<td><a href="./myshop/PC_MYP_1006.html" target="_blank">./member/PC_MYP_1006.html</a></td>
+					<td></td>
+				</tr>
+				<tr>
+					<td>마이페이지 > 취소/반품/교환 내역</td>
+					<td>PC_MYP_1007</td>
+					<td><a href="./myshop/PC_MYP_1007.html" target="_blank">./member/PC_MYP_1007.html</a></td>
+					<td></td>
+				</tr>
+				<tr>
+					<td>마이페이지 > 취소/반품/교환 내역 > 취소/반품/교환 상세정보 팝업</td>
+					<td>PC_MYP_1008_L</td>
+					<td><a href="./myshop/PC_MYP_1008_L.html" target="_blank">./member/PC_MYP_1008_L.html</a></td>
+					<td></td>
+				</tr>
+				<tr>
+					<td>마이페이지 > 회원 정보 수정</td>
+					<td>PC_MYP_1009</td>
+					<td><a href="./myshop/PC_MYP_1009.html" target="_blank">./member/PC_MYP_1009.html</a></td>
 					<td></td>
 				</tr>
 			</table>
