--- a/src/member/PC_JON_1000.html
+++ b/src/member/PC_JON_1000.html
@@ -26,15 +26,15 @@
 						<div module="member_join">
 							<div class="member__group">
 								<div class="member__card">
-									<div class="member__row">
-										<div class="member__left">
-											<p class="member__title">기본정보</p>
-										</div>
-										<div class="member__right">
-											<span class="required">필수입력사항</span>
-										</div>
-									</div>
 									<div class="table">
+										<div class="table__header">
+											<div class="table__left">
+												<p class="table__title">기본정보</p>
+											</div>
+											<div class="table__right">
+												<span class="required">필수입력사항</span>
+											</div>
+										</div>
 										<div class="table__table">
 											<div class="table__row">
 												<div class="table__left">
@@ -77,8 +77,8 @@
 													<span class="required">비밀번호 확인</span>
 												</div>
 												<div class="table__right">
-													<div class="form form--large">
-														<div class="form__row">
+													<div class="form">
+														<div class="form__row form__row--large">
 															<div class="form__set">
 																<div class="form__field">
 																	<div class="form__col">
