--- a/src/myshop/PC_MYP_1002.html
+++ b/src/myshop/PC_MYP_1002.html
@@ -142,7 +142,7 @@
 											<div class="product__tbody">
 												<div class="product__tr">
 													<div class="product__td product__td--img">
-														<img src="../assets/images/@img_product01.png" alt="">
+														<div class="product__img"><img src="../assets/images/@img_product01.png" alt=""></div>
 													</div>
 													<div class="product__td">
 														<div class="product__row">
@@ -170,14 +170,6 @@
 																		<p class="product__date">2022-05-02</p>
 																	</div>
 																</div>
-																<div class="product__group product__mobile">
-																	<div class="product__left">주문처리상태</div>
-																	<div class="product__right">배송완료</div>
-																</div>
-																<div class="product__group product__mobile">
-																	<div class="product__left">취소/교환/반품</div>
-																	<div class="product__right">-</div>
-																</div>
 																<div class="button">
 																	<div class="button__container">
 																		<a href="#" class="button__item">주문취소</a>
@@ -185,16 +177,44 @@
 																	</div>
 																</div>
 															</div>
-															<div class="product__col">1</div>
-															<div class="product__col">₩135,000</div>
-															<div class="product__col">입금전</div>
-															<div class="product__col">-</div>
+															<div class="product__col product__col--mobile-hidden">
+																<span class="product__group">
+																	<div class="product__left">수량</div>
+																	<div class="product__right">1</div>
+																</span>
+															</div>
+															<div class="product__col product__col--mobile-hidden">
+																<div class="product__group">
+																	<div class="product__left">상품구매금액</div>
+																	<div class="product__right">₩135,000</div>
+																</div>
+															</div>
+															<div class="product__col">
+																<div class="product__group">
+																	<div class="product__left">주문처리상태</div>
+																	<div class="product__right">입금전</div>
+																</div>
+															</div>
+															<div class="product__col">
+																<div class="product__group">
+																	<div class="product__left">취소/교환/반품</div>
+																	<div class="product__right">-</div>
+																</div>
+															</div>
+															<div class="product__col product__col--desktop-hidden">
+																<div class="button">
+																	<div class="button__container">
+																		<a href="#" class="button__item">주문취소</a>
+																		<a href="#" class="button__item">교환신청</a>
+																	</div>
+																</div>
+															</div>
 														</div>
 													</div>
 												</div>
 												<div class="product__tr">
 													<div class="product__td product__td--img">
-														<img src="../assets/images/@img_product01.png" alt="">
+														<div class="product__img"><img src="../assets/images/@img_product01.png" alt=""></div>
 													</div>
 													<div class="product__td">
 														<div class="product__row">
@@ -222,14 +242,6 @@
 																		<p class="product__date">2022-05-02</p>
 																	</div>
 																</div>
-																<div class="product__group product__mobile">
-																	<div class="product__left">주문처리상태</div>
-																	<div class="product__right">배송완료</div>
-																</div>
-																<div class="product__group product__mobile">
-																	<div class="product__left">취소/교환/반품</div>
-																	<div class="product__right">-</div>
-																</div>
 																<div class="button">
 																	<div class="button__container">
 																		<a href="#" class="button__item">주문취소</a>
@@ -237,10 +249,38 @@
 																	</div>
 																</div>
 															</div>
-															<div class="product__col">1</div>
-															<div class="product__col">₩135,000</div>
-															<div class="product__col">입금전</div>
-															<div class="product__col">-</div>
+															<div class="product__col product__col--mobile-hidden">
+																<span class="product__group">
+																	<div class="product__left">수량</div>
+																	<div class="product__right">1</div>
+																</span>
+															</div>
+															<div class="product__col product__col--mobile-hidden">
+																<div class="product__group">
+																	<div class="product__left">상품구매금액</div>
+																	<div class="product__right">₩135,000</div>
+																</div>
+															</div>
+															<div class="product__col">
+																<div class="product__group">
+																	<div class="product__left">주문처리상태</div>
+																	<div class="product__right">입금전</div>
+																</div>
+															</div>
+															<div class="product__col">
+																<div class="product__group">
+																	<div class="product__left">취소/교환/반품</div>
+																	<div class="product__right">-</div>
+																</div>
+															</div>
+															<div class="product__col product__col--desktop-hidden">
+																<div class="button">
+																	<div class="button__container">
+																		<a href="#" class="button__item">주문취소</a>
+																		<a href="#" class="button__item">교환신청</a>
+																	</div>
+																</div>
+															</div>
 														</div>
 													</div>
 												</div>
