--- a/src/member/PC_LOG_1000.html
+++ b/src/member/PC_LOG_1000.html
@@ -62,6 +62,8 @@
 												<a href="#" class="login__menu">회원가입</a>
 												<a href="#" class="login__menu">아이디찾기</a>
 												<a href="#" class="login__menu">비밀번호찾기</a>
+												<a href="#" class="login__menu">비회원 주문하기</a>
+												<a href="#" class="login__menu">비회원 주문조회</a>
 											</div>
 										</fieldset>
 									</div>
