마이페이지

--- a/src/myshop/PC_MYP_1009.html
+++ b/src/myshop/PC_MYP_1009.html
@@ -349,7 +349,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="myshop__sticky">
+						<div class="myshop__aside">
 							<div class="myshop__roundbox myshop__roundbox--user">
 								<div module="myshop_asyncbenefit">
 									<p class="myshop__my">
