마이샵 > 상품리뷰관리 작업 중

--- a/src/index.html
+++ b/src/index.html
@@ -186,6 +186,12 @@
 					<td><a href="./myshop/PC_MYP_1009.html" target="_blank">./member/PC_MYP_1009.html</a></td>
 					<td></td>
 				</tr>
+				<tr>
+					<td>마이페이지 > 상품리뷰관리</td>
+					<td>PC_MYP_1017</td>
+					<td><a href="./myshop/PC_MYP_1017.html" target="_blank">./member/PC_MYP_1017.html</a></td>
+					<td></td>
+				</tr>
 			</table>
 		</div>
 		<footer class="footer"></footer>
