--- a/src/index.html
+++ b/src/index.html
@@ -192,6 +192,12 @@
 					<td><a href="./myshop/PC_MYP_1017.html" target="_blank">./member/PC_MYP_1017.html</a></td>
 					<td></td>
 				</tr>
+				<tr>
+					<td>마이페이지 > 멤버십프로그램</td>
+					<td>PC_MYP_1018</td>
+					<td><a href="./myshop/PC_MYP_1018.html" target="_blank">./member/PC_MYP_1018.html</a></td>
+					<td></td>
+				</tr>
 			</table>
 		</div>
 		<footer class="footer"></footer>
