마이샵 > 멤버십 작업중

--- a/src/myshop/PC_MYP_1018.html
+++ b/src/myshop/PC_MYP_1018.html
@@ -28,18 +28,23 @@
             <div class="membership_head">
               내등급 확인
             </div>
-            <div class="membership_item">
-              안녕하세요 홍길동 회원님!<br>
-              회원님의 등급은 일반회원 이십니다.
-            </div>
-            <div class="membership_item">
-              <ul>
-                <li>0원 이상 구매시 0%을 추가할인</li>
-                <li>0원 이상 구매시 3%을 추가적립</li>
-              </ul>
+            <div class="membership_item2">
+              <div class="membership_item">
+                안녕하세요 홍길동 회원님!<br>
+                회원님의 등급은 일반회원 이십니다.
+              </div>
+              <div class="membership_item">
+                <ul>
+                  <li>0원 이상 구매시 0%을 추가할인</li>
+                  <li>0원 이상 구매시 3%을 추가적립</li>
+                </ul>
+              </div>
             </div>
           </div>
-
+          
+          <div class="membership-table_info">
+            <p><i></i>옆으로 밀어서 확인</p>
+          </div>
           <div class="membership_row row-table">
             <table>
               <thead>
@@ -107,7 +112,7 @@
             <div class="membership_head">
               이용안내
             </div>
-            <div class="membership_item">
+            <div class="membership_item2 item_full">
               회원등급은 공식홈페이지의 누적 실구매금액을 기준으로만 산정됩니다. (외부입점몰 제외)<br>
               등급은 영업일 기준, 결제완료 다음 날 오전 11시에 갱신됩니다.(주말, 연휴기간에는 갱신되지 않습니다)<br>
               멤버십에 대한 상세내용은 변경될 수 있습니다. 
@@ -117,7 +122,7 @@
             <div class="membership_head">
               적립금
             </div>
-            <div class="membership_item">
+            <div class="membership_item2 item_full">
               실 결제금액의 3% 적립 (트리오 4%, 콰르텟 5%, 퀀텟5%)<br>
               결제금액 5,000원 이상부터 사용가능<br>
               적립금은 배송완료 7일 이후 적립<br>
