마이샵 > 멤버십

--- a/src/myshop/PC_MYP_1018.html
+++ b/src/myshop/PC_MYP_1018.html
@@ -131,6 +131,10 @@
               적립일로부터 1년 이내에 사용가능, 1년이 초과된 경우 소멸
             </div>
           </div>
+
+          <div class="membership_button">
+            <a href="#" class="button">내 적립금 확인하기</a>
+          </div>
         </div>
 			</div>
 		</div>
