취소신청 추가

--- a/src/index.html
+++ b/src/index.html
@@ -169,6 +169,12 @@
 					<td></td>
 				</tr>
 				<tr>
+					<td>마이페이지 > 취소신청</td>
+					<td>PC_MYP_1006</td>
+					<td><a href="./myshop/PC_MYP_1006_2.html" target="_blank">./member/PC_MYP_1006_2.html</a></td>
+					<td></td>
+				</tr>
+				<tr>
 					<td>마이페이지 > 취소/반품/교환 내역</td>
 					<td>PC_MYP_1007</td>
 					<td><a href="./myshop/PC_MYP_1007.html" target="_blank">./member/PC_MYP_1007.html</a></td>
