마이페이지

--- a/src/index.html
+++ b/src/index.html
@@ -187,6 +187,48 @@
 					<td></td>
 				</tr>
 				<tr>
+					<td>마이페이지 > 적립금 조회 > 적립 내역 보기</td>
+					<td>PC_MYP_1010</td>
+					<td><a href="./myshop/PC_MYP_1010.html" target="_blank">./member/PC_MYP_1010.html</a></td>
+					<td></td>
+				</tr>
+				<tr>
+					<td>마이페이지 > 적립금 조회 > 미가용 적립 내역 보기</td>
+					<td>PC_MYP_1011</td>
+					<td><a href="./myshop/PC_MYP_1011.html" target="_blank">./member/PC_MYP_1011.html</a></td>
+					<td></td>
+				</tr>
+				<tr>
+					<td>마이페이지 > 적립금 조회 > 미가용 쿠폰 / 회원등급 적립 내역</td>
+					<td>PC_MYP_1012</td>
+					<td><a href="./myshop/PC_MYP_1012.html" target="_blank">./member/PC_MYP_1012.html</a></td>
+					<td></td>
+				</tr>
+				<tr>
+					<td>마이페이지 > 마이쿠폰 목록</td>
+					<td>PC_MYP_1013</td>
+					<td><a href="./myshop/PC_MYP_1013.html" target="_blank">./member/PC_MYP_1013.html</a></td>
+					<td></td>
+				</tr>
+				<tr>
+					<td>마이페이지 > 게시물 관리</td>
+					<td>PC_MYP_1014</td>
+					<td><a href="./myshop/PC_MYP_1014.html" target="_blank">./member/PC_MYP_1014.html</a></td>
+					<td></td>
+				</tr>
+				<tr>
+					<td>마이페이지 > 배송 주소록 관리</td>
+					<td>PC_MYP_1015</td>
+					<td><a href="./myshop/PC_MYP_1015.html" target="_blank">./member/PC_MYP_1015.html</a></td>
+					<td></td>
+				</tr>
+				<tr>
+					<td>마이페이지 > 배송 주소록 관리 > 배송지 등록</td>
+					<td>PC_MYP_1016</td>
+					<td><a href="./myshop/PC_MYP_1016.html" target="_blank">./member/PC_MYP_1016.html</a></td>
+					<td></td>
+				</tr>
+				<tr>
 					<td>마이페이지 > 상품리뷰관리</td>
 					<td>PC_MYP_1017</td>
 					<td><a href="./myshop/PC_MYP_1017.html" target="_blank">./member/PC_MYP_1017.html</a></td>
