--- a/src/myshop/PC_MYP_1013.html
+++ b/src/myshop/PC_MYP_1013.html
@@ -27,11 +27,13 @@
 								<div class="coupon">
 									<div module="myshop_CouponList">
 										<ul class="coupon__list">
-											<li class="coupon__item coupon__item--summer">
+											<li class="coupon__item">
 												<div class="coupon__coupon">
 													<div class="coupon__top">
 														<p class="coupon__category">SS22 상품</p>
-
+														<p class="coupon__name">SUMMER SPECIAL</p>
+														<p class="coupon__discount">10%OFF</p>
+														<p class="coupon__price">40,000 이상 구매시 (최대 2000원)</p>
 													</div>
 													<div class="coupon__bottom">
 														<p class="coupon__date">2022/05/21 - 2022/06/21</p>
@@ -42,7 +44,9 @@
 												<div class="coupon__coupon">
 													<div class="coupon__top">
 														<p class="coupon__category">SS22 상품</p>
-
+														<p class="coupon__name">SUMMER SPECIAL</p>
+														<p class="coupon__discount">10%OFF</p>
+														<p class="coupon__price">40,000 이상 구매시 (최대 2000원)</p>
 													</div>
 													<div class="coupon__bottom">
 														<p class="coupon__date">2022/05/21 - 2022/06/21</p>
@@ -53,7 +57,9 @@
 												<div class="coupon__coupon">
 													<div class="coupon__top">
 														<p class="coupon__category">SS22 상품</p>
-
+														<p class="coupon__name">SUMMER SPECIAL</p>
+														<p class="coupon__discount">10%OFF</p>
+														<p class="coupon__price">40,000 이상 구매시 (최대 2000원)</p>
 													</div>
 													<div class="coupon__bottom">
 														<p class="coupon__date">2022/05/21 - 2022/06/21</p>
