마이페이지

--- a/src/myshop/PC_MYP_1018.html
+++ b/src/myshop/PC_MYP_1018.html
@@ -19,7 +19,7 @@
     <div class="container">
 			<div class="myshop">
 				
-        <div class="myshop__container">
+        <div class="myshop__container myshop__container--wide">
 					<div class="myshop__header">
 						<p class="myshop__title">멤버십 프로그램</p>
 					</div>
