--- a/src/index.html
+++ b/src/index.html
@@ -246,6 +246,24 @@
 					<td><a href="./myshop/PC_MYP_1018.html" target="_blank">./member/PC_MYP_1018.html</a></td>
 					<td></td>
 				</tr>
+				<tr>
+					<td>에러404</td>
+					<td>PC_COM_1011</td>
+					<td><a href="./etc/PC_COM_1011.html" target="_blank">./etc/PC_COM_1011.html</a></td>
+					<td></td>
+				</tr>
+				<tr>
+					<td>에러500</td>
+					<td>PC_COM_1012</td>
+					<td><a href="./etc/PC_COM_1012.html" target="_blank">./etc/PC_COM_1012.html</a></td>
+					<td></td>
+				</tr>
+				<tr>
+					<td>이벤트 상세</td>
+					<td>PC_COM_1013</td>
+					<td><a href="./event/PC_COM_1013.html" target="_blank">./event/PC_COM_1013.html</a></td>
+					<td></td>
+				</tr>
 			</table>
 		</div>
 		<footer class="footer"></footer>
