--- a/src/myshop/PC_MYP_1015.html
+++ b/src/myshop/PC_MYP_1015.html
@@ -103,7 +103,7 @@
 											</div>
 											<div class="table-detail__tr">
 												<div class="table-detail__td table-detail__auto">
-													<input type="checkbox">
+													<input type="checkbox" checked>
 												</div>
 												<div class="table-detail__td table-detail__10">
 													<div class="button">
