--- a/src/myshop/PC_MYP_1002.html
+++ b/src/myshop/PC_MYP_1002.html
@@ -358,25 +358,13 @@
 													<li class="bullet__item">
 														<div class="bullet__row">
 															<span class="bullet__unit">1.</span>
-															<span class="bullet__text">현금영수증은 1원 이상의 현금성거래(무통장입금, 실시간계좌이체, 에스크로, 예치금 에 대해 발행이 됩니다.</span>
+															<span class="bullet__text">변경된 부가가치세법에 의거, 2004.7.1 이후 신용카드로 결제하신 주문에 대해서는 세금계산서 발행이 불가하며 신용카드매출전표로 부가가치세 신고를 하셔야 합니다.(부가가치세법 시행령 57조)</span>
 														</div>
 													</li>
 													<li class="bullet__item">
 														<div class="bullet__row">
 															<span class="bullet__unit">2.</span>
-															<span class="bullet__text">현금영수증 발행 금액에는 배송비는 포함되고, 적립금사용액은 포함되지 않습니다.</span>
-														</div>
-													</li>
-													<li class="bullet__item">
-														<div class="bullet__row">
-															<span class="bullet__unit">3.</span>
-															<span class="bullet__text">현금연수증 발행 취소의 경우는 시간 제한이 없습니다. (국세청의 정책에 따라 변경 될 수 있습니다.)</span>
-														</div>
-													</li>
-													<li class="bullet__item">
-														<div class="bullet__row">
-															<span class="bullet__unit">4.</span>
-															<span class="bullet__text">현금영수증이나 세금계산서 중 하나만 발행 가능 합니다.</span>
+															<span class="bullet__text">상기 부가가치세법 변경내용에 따라 신용카드 이외의 결제건에 대해서만 세금계산서 발행이 가능함을 양지하여 주시기 바랍니다.</span>
 														</div>
 													</li>
 												</ul>
@@ -428,13 +416,31 @@
 													<li class="bullet__item">
 														<div class="bullet__row">
 															<span class="bullet__unit">1.</span>
-															<span class="bullet__text">변경된 부가가치세법에 의거, 2004,7.1 이후 신용카드로 결제하신 주문에 대해서는 세금계산서 발행이 불가하며 신용카드 매출전표로 부가가치세 신고를 하셔야합니다. (부가가치세법 시행령 57조)</span>
+															<span class="bullet__text">현금영수증은 1원 이상의 현금성거래(무통장입금, 실시간계좌이체, 에스크로, 예치금)에 대해 발행이 됩니다.</span>
 														</div>
 													</li>
 													<li class="bullet__item">
 														<div class="bullet__row">
 															<span class="bullet__unit">2.</span>
-															<span class="bullet__text">[전체 상품 주문] 버튼을 누르시면 장바구니의 구분없이 선택한 모든 상품에 대한 주문/결제가 이루어집니다.</span>
+															<span class="bullet__text">현금영수증 발행 금액에는 배송비는 포함되고, 적립금사용액은 포함되지 않습니다.</span>
+														</div>
+													</li>
+													<li class="bullet__item">
+														<div class="bullet__row">
+															<span class="bullet__unit">3.</span>
+															<span class="bullet__text">발행신청 기간제한 현금영수증은 입금확인일로 부터 48시간안에 발행을 해야 합니다.</span>
+														</div>
+													</li>
+													<li class="bullet__item">
+														<div class="bullet__row">
+															<span class="bullet__unit">4.</span>
+															<span class="bullet__text">현금영수증 발행 취소의 경우는 시간 제한이 없습니다. (국세청의 정책에 따라 변경 될 수 있습니다.)</span>
+														</div>
+													</li>
+													<li class="bullet__item">
+														<div class="bullet__row">
+															<span class="bullet__unit">5.</span>
+															<span class="bullet__text">현금영수증이나 세금계산서 중 하나만 발행 가능 합니다.</span>
 														</div>
 													</li>
 												</ul>
