--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
 		<div style="padding-top: 200px;">
 			<style>
 				table {width: 80%;margin: 0 auto;}
-				th, td {border: 1px solid #dfdfdf;padding: 10px;}
+				th, td {border: 1px solid #dfdfdf !important;padding: 10px;}
 			</style>
 			<table>
 				<thead>
