마이샵 > 게시물관리

--- a/src/myshop/PC_MYP_1014.html
+++ b/src/myshop/PC_MYP_1014.html
@@ -23,26 +23,21 @@
 							<div class="filter">
 								<div class="filter__row">
 									<div class="filter__left">
-										<div module="myshop_boardListHead">
-											<div class="select">
+										<div module="myshop_boardlistSearch">
+											<div module="myshop_boardListHead" class="select">
 												<select name="" id="">
 													<option value="">작성일자</option>
 												</select>
 											</div>
-										</div>
-										<div module="myshop_boardlistSearch">
-											<fieldset>
-												<legend class="a11y">게시물 검색</legend>
-												<div class="filter__row">
-													<div class="select">
-														<select name="" id="">
-															<option value="">글쓴이</option>
-														</select>
-													</div>
-													<input type="text" placeholder="검색어 입력">
-													<button type="button" class="filter__search">조회</button>
+											<div class="filter__row">
+												<div class="select">
+													<select name="" id="">
+														<option value="">글쓴이</option>
+													</select>
 												</div>
-											</fieldset>
+												<input type="text" placeholder="검색어 입력">
+												<button type="button" class="filter__search">조회</button>
+											</div>
 										</div>
 									</div>
 								</div>
