마이샵 > 게시물관리

--- a/src/myshop/PC_MYP_1014.html
+++ b/src/myshop/PC_MYP_1014.html
@@ -22,22 +22,20 @@
 							<p class="myshop__title">게시물 관리</p>
 							<div class="filter">
 								<div class="filter__row">
-									<div class="filter__left">
-										<div module="myshop_boardlistSearch">
-											<div module="myshop_boardListHead" class="select">
-												<select name="" id="">
-													<option value="">작성일자</option>
-												</select>
-											</div>
-											<div class="filter__row">
-												<div class="select">
-													<select name="" id="">
-														<option value="">글쓴이</option>
-													</select>
-												</div>
-												<input type="text" placeholder="검색어 입력">
-												<button type="button" class="filter__search">조회</button>
-											</div>
+									<div module="myshop_boardlistSearch" class="filter__left">
+										<div module="myshop_boardListHead" class="select">
+											<select name="" id="">
+												<option value="">작성일자</option>
+											</select>
+										</div>
+										<div class="select">
+											<select name="" id="">
+												<option value="">글쓴이</option>
+											</select>
+										</div>
+										<div class="filter__row">
+											<input type="text" placeholder="검색어 입력">
+											<button type="button" class="filter__search">조회</button>
 										</div>
 									</div>
 								</div>
