수정사항 반영

--- a/src/member/PC_LOG_1000.html
+++ b/src/member/PC_LOG_1000.html
@@ -26,9 +26,10 @@
 							</div>
 							<div class="login__right">
 								<div class="login__normal">
+									<p class="login__title">LOGIN</p>	
 									<div module="member_login">
 										<fieldset>
-											<legend class="login__title">LOGIN</legend>
+											<legend class="a11y">로그인</legend>
 											<div class="login__security">
 												<p class="login__text">
 													<i class="login__ico"></i>
@@ -92,10 +93,6 @@
 				</div>
 			</div>
     </div>
-
-		@@include('../inc/footer.inc', {
-			"webroot": "../"
-		})
 	</div>
 </body>
 </html>
